# agent-self-healing

./: Cargo.toml  README.md  flake.nix  propel.toml
.github/workflows/: ci.yml
crates/healing-brains/: Cargo.toml
crates/healing-conformance/: Cargo.toml
crates/healing-core/: Cargo.toml
crates/healing-core/src/: action.rs  checkpoint.rs  incident.rs  lib.rs  policy.rs  signal.rs
crates/healing-engine/: Cargo.toml
crates/healing-engine/src/: classifier.rs  lib.rs  planner.rs
crates/healing-graph/: Cargo.toml
crates/healing-mom/: Cargo.toml
crates/healing-mom/src/: supervisor.rs
crates/healing-scheduler-adapter/: Cargo.toml
crates/healing-server/: Cargo.toml
crates/healing-server/src/: main.rs
crates/healing-store-surreal/: Cargo.toml
docs/: PLANNING.md
