[workspace]


resolver = "2"
members = [
    "crates/healing-core",
    "crates/healing-engine",
    "crates/healing-store-surreal",
    "crates/healing-scheduler-adapter",
    "crates/healing-graph",
    "crates/healing-brains",
    "crates/healing-mom",
    "crates/healing-server",
    "crates/healing-conformance",
]

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
